[tool.poetry]
name = "aioworxmower-docs"
version = "0.1.0"
description = "Documentation for aioworxmower"
authors = ["aioworxmower Team <dev@example.com>"]
package-mode = false   # <<< Fix für Poetry ohne Package

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
mkdocs-material = ">=9.5"
mkdocs = ">=1.6"
mkdocs-awesome-pages-plugin = ">=2.9"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
